# example2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/bagit/: bag-info.txt  manifest-sha512.txt  tagmanifest-sha512.txt
src/bagit/data/: ro-crate-metadata.json  ro-crate-preview.html
src/bagit/data/governance/: project.yaml
src/bagit/data/metadata/: dataset_01.yaml
test/: test_server.py
