[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Piotr Mucha", email = "pzm@data-ai.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
example-pkg = "example_pkg:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
